--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.20.0",
     "body-parser": "^1.20.3",
     "express": "^4.21.0"
   },
   "devDependencies": {
+    "prisma": "^5.20.0",
     "supertest": "^7.0.0",
     "vitest": "^2.1.1"
   }
