updated readme & .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,6 @@
 
-HTTP_PORT=5170
+HTTP_PORT=5001
 
-DATABASE_URL="postgresql://tdd_user:tdd_pass@localhost:5432/tdd_db?schema=public"
+DATABASE_URL="postgresql://<user>:<password>@localhost:5432/<db_name>?schema=public"
 
-DB_NAME=tdd_db
-DB_USER=tdd_user
-DB_PASSWORD=tdd_pass
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_SSL_MODE=disable
+JWT_SECRET="sample_secret_here"
