--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "tasker api",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "dev": "nodemon ./server.js",
     "test:unit": "vitest run tests/unit/**/*.unit.spec.ts tests/unit/*.unit.spec.ts",
     "test:integration": "vitest run tests/integration/**/*.integration.spec.ts tests/integration/*.integration.spec.ts",
