--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Build Docker image
         run: |
           IMAGE_TAG="${{ secrets.DOCKERHUB_USERNAME }}/tasker-api:${{ env.ENVIRONMENT }}"
-          docker build --build-arg DATABASE_URL=${{ secrets.DATABASE_URL }} -t $IMAGE_TAG .
+          docker build --build-arg DATABASE_URL=${{ secrets.DEFAULT_DB_URL }} -t $IMAGE_TAG .
           echo "Built image with tag: $IMAGE_TAG"
 
       # Step 13: Push the Docker image to Docker Hub
