--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Build Docker image
         run: |
           IMAGE_TAG="${{ secrets.DOCKERHUB_USERNAME }}/tasker-api:${{ env.ENVIRONMENT }}"
-          docker build --build-arg DATABASE_URL=${{ secrets.UAT_DB_URL }} -t $IMAGE_TAG .
+          docker build --build-arg DATABASE_URL=${{ secrets.UAT_DB_URL }} --build-arg HTTP_PORT=${{ secrets.HTTP_PORT }} --build-arg JWT_SECRET=${{ secrets.JWT_SECRET }} -t $IMAGE_TAG .
           echo "Built image with tag: $IMAGE_TAG"
 
       # Step 13: Push the Docker image to Docker Hub
