--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
               echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> $GITHUB_ENV
           fi
 
-      - name: Deploy API to GCP ($ENVIRONMENT)
+      - name: Deploy API to GCP (${{ env.ENVIRONMENT }})
         run: |
           gcloud run deploy tasker-api-${{ github.event.inputs.environment }} \
           --image docker.io/naumanz/tasker-api:${{ github.event.inputs.environment }} \
