type choice workflow_dispatch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,10 @@ on:
         description: 'Deployment environment (uat or prod)'
         required: true
         default: 'uat'
+        type: choice
+        options:
+          - uat
+          - prod
 
 jobs:
   deploy-api:
